fix footer bottom on mobile

--- a/src/blocks/modules/footer/_footer.scss
+++ b/src/blocks/modules/footer/_footer.scss
@@ -1,10 +1,14 @@
 .footer {
-    &-bottom{
+    &-bottom {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        p{
+        p {
             margin-bottom: 0;
+        }
+        @include media-breakpoint-down(sm) {
+            flex-direction: column-reverse;
+            align-items: center;
         }
     }
     a,
@@ -16,7 +20,7 @@
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
-        a{
+        a {
             font-size: 1.25rem;
             color: $gray-500;
             margin: 0 .5rem;
